--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.7.0"
+    "bs-custom-file-input": "^1.3.4",
+    "css-loader": "^6.7.4",
+    "jquery": "^3.7.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
+    "webpack-notifier": "^1.15.0"
+  },
+  "dependencies": {
+    "@symfony/webpack-encore": "^4.3.0"
+  },
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
   }
 }
