--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.path.article_visuels: /images/cookies
+    app.mailJetkey: '%env(APP_MAILJETKEY)%'
+    app.mailJetsecretkey: '%env(APP_MAILJETSECRETKEY)%'
 
 services:
     # default configuration for services in *this* file
